@@ -4,3 +4,4 @@
 /usr/bin/runinstall2 install2
 /sbin/fsck.ext2 e2fsck
 /lib/modules /modules
+/usr/share/X11/xkb/compiled /tmp
