@@ -36,7 +36,9 @@
   quotacheck
 
   setfont kbd_mode
-  Xorg xmodmap xset
+  Xorg xset
+  xkbcomp setxkbmap
+
   fb2png
   perl
   monitor-edid monitor-get-edid-using-vbe monitor-parse-edid monitor-get-edid
@@ -71,6 +73,20 @@
   linux/libfbdevhw.so
   libfb.so
   libshadow.so
+</from>
+
+<from dir="/usr/share/X11/xkb">
+ <filter subst="s!//.*!!; $_ = '' if $ARGV =~ /inet$/">
+  geometry/pc
+  keycodes/aliases
+  keycodes/xfree86
+  rules/xorg
+  rules/xorg.lst
+  compat semantics types
+  <from expand="glob">
+    symbols/*
+  </from>
+ </filter>
 </from>
 
 <from dir="/usr/share/fonts/">
@@ -120,6 +136,7 @@
   /etc/rpm/macros.cdb
   /LIB/udev/usb_id
   /usr/LIB/xserver/SecurityPolicy
+  /usr/share/X11/XKeysymDB
   /etc/pango/ARCH/pango.modules
   /usr/LIB/gtk-2.0/*/loaders/libpixbufloader-png.so
   <!-- XPM loader is needed by Gtk2::Html2 on error -->
@@ -382,7 +399,6 @@
 <from dir="share">
   <from expand="tar">
     fonts.tar.bz2
-    keyboards.tar.bz2
     keymaps.tar.bz2
   </from>
 
