@@ -50,7 +50,7 @@ sub new($$) {
 	    } else {
 		install::gtk::createXconf($f, @{$o->{mouse}}{'Protocol', 'device'}, $o->{mouse}{wacom}[0], $Driver);
 
-		push @options, '-kb', '-allowMouseOpenFail', '-xf86config', $f if arch() !~ /^sparc/;
+		push @options, '-allowMouseOpenFail', '-xf86config', $f if arch() !~ /^sparc/;
 		push @options, 'tty7', '-s', '240';
 
 		#- old weird servers: Xsun
